# linuxPrograms

000_check_glibc_version/: main.cpp
001_hello/: hello.cpp  编码编译流程.txt
002_makefile/: Makefile实现过程.txt
002_makefile/make/: fun.cpp  fun.h  hello.cpp  main  makefile
003_call_so_library/: readme.txt
003_call_so_library/main/: main.cpp  makefile
004_call_static_and_shared_library/main/: Makefile  main.cpp
004_call_static_and_shared_library/shared_library/: Makefile  cal.cpp  cal.h
004_call_static_and_shared_library/static_library/: Makefile  add.cpp  add.d  add.h  div.cpp  div.d  div.h  mul.cpp  mul.d  mul.h  sub.cpp  sub.d  sub.h
005_bizlars/: build.sh  readme.txt
005_bizlars/main/: Makefile  history.txt  startWithValgrind.sh
005_bizlars/main/doc/: ADCtest QuickStart Manual.docx
005_bizlars/main/src/: adctest.cpp
005_bizlars/shared_library/: Makefile  history.txt
005_bizlars/shared_library/include/: adcfirmware.h  adcinterface.h  adcprotocol.h  adcrbs.h  adcserial.h  adcssp.h  adctilt.h  adctrace.h  adcusb.h  authentication.h  bizlars.h  countrysettings.h  crypto.h  helpers.h  (+7 more)
005_bizlars/static_library/: GNUmakefile  Makefile.bak  wake.cpp
006_fime_gettimeofday/src/: CMakeLists.txt
006_ftime_gettimeofday/: build.sh
006_ftime_gettimeofday/src/: Makefile  main.cpp
007_getlogin_r/: build.sh
007_getlogin_r/src/: CMakeLists.txt  main.cpp
008_pthread/: build.sh
008_pthread/src/: CMakeLists.txt  main.cpp
009_glob_globfree/src/: main.cpp
010_catch_signal/src/: main.cpp
011_c_macro_define/src/: CMakeLists.txt  main.cpp
012_va_list/: README.txt
012_va_list/src/: main.cpp
013_strstr_functions/src/: main.cpp
014_obj_link_test/: README.txt  build.sh  search.sh
014_obj_link_test/src/: CMakeLists.txt  device.cpp  device.h  main.cpp
015_attribute_setction/: README.txt  search.sh
015_attribute_setction/src/: CMakeLists.txt  main.c
016_IPC_named_pipe/: README.txt  build.sh
016_IPC_named_pipe/src_read/: CMakeLists.txt  main.c
016_IPC_named_pipe/src_write/: CMakeLists.txt  main.c
017_IPC_named_pipe_with_fork/: README.txt  clean.sh
017_IPC_named_pipe_with_fork/src_read/: main.c
017_IPC_named_pipe_with_fork/src_write/: main.c
018_IPC_socket/: README.txt  build.sh  clean.sh
018_IPC_socket/src_client/: CMakeLists.txt  main.c
018_IPC_socket/src_server/: main.c
019_IPC_poll/: README.txt  build.sh
019_IPC_poll/src_client/: main.c
019_IPC_poll/src_server/: main.c
020_IPC_epoll/: README.txt  clean.sh  test.sh
020_IPC_epoll/src_client/: main.c
020_IPC_epoll/src_server/: CMakeLists.txt  main.c
021_IPC_message_queque/: build.sh  clean.sh
021_IPC_message_queque/src/: CMakeLists.txt  main.c
(+18 files in other folders)
